--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@
   --ff-open-sans: 'Open Sans', sans-serif;
   --ff-barlow: 'Barlow', sans-serif;
   --ff-poppins: 'Poppins', sans-serif;
+  --ff-cursive: 'Cedarville Cursive', cursive;
 
   --fs-1: 3.5rem;
   --fs-2: 3rem;
@@ -249,10 +250,12 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-
+.typed-cursor{
+  display: none;
+}
 .logo {
   color: var(--white);
-  font-family: var(--ff-poppins);
+  font-family: var(--ff-cursive);
   font-size: 2.4rem;
 }
 
@@ -328,7 +331,7 @@ body {
 .hero-banner img { border-radius: inherit; }
 
 .hero-content {
-  text-align: center;
+  /* text-align: center; */
   color: var(--white);
 }
 
@@ -435,7 +438,10 @@ body {
   color: var(--orange-soda);
   font-size: 1.6rem;
 }
-
+.portfolio-card:hover{
+  color: #353d55;
+  /* background-image: none; */
+}
 
 
 
@@ -889,9 +895,22 @@ textarea.contact-input {
 
   .elem-2 {
     bottom: 30px;
-    right: -80px;
+    right: -200px;
   }
 
+  .header-text{
+    margin-top: 20%;
+    font-size: 30px;
+}
+
+.header-text h1{
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+.header-text h1 span{
+    color: #312b2a;
+}
   .elem-2 .elem-title { color: var(--fiery-rose); }
 
   .elem-title {
@@ -986,7 +1005,7 @@ textarea.contact-input {
   .abs-icon-3 {
     bottom: -40px;
     left: 250px;
-    background-color: var(--rufous);
+    background-color:#e54f24;
   }
 
 
